Consistent console UI.

--- a/templates/boomi-molecule-master.template.yaml
+++ b/templates/boomi-molecule-master.template.yaml
@@ -156,10 +156,10 @@ Parameters:
   EFSEncryption:
     Description: EFS volumes can be encrypted. Choose either "yes" or "no".
     Type: String
-    Default: yes
+    Default: true
     AllowedValues:
-      - yes
-      - no
+      - true
+      - false
   EFSPerformanceMode:
     Description: The performance mode for the EFS volume.
     Type: String
