Update default name for EC2SecurityGroup
Changed it from Molecule to EC2 in description

--- a/templates/boomi-molecule.template.yaml
+++ b/templates/boomi-molecule.template.yaml
@@ -196,7 +196,7 @@ Metadata:
       SSLCertificateArn:
         default: SSL certificate ARN
       EC2SecurityGroupID:
-        default: Molecule Security Group ID
+        default: EC2 Security Group ID
       BastionSecurityGroupID:
         default: Bastion security group ID
 Mappings:
