--- a/templates/boomi-molecule.template.yaml
+++ b/templates/boomi-molecule.template.yaml
@@ -48,12 +48,8 @@ Parameters:
   BoomiAccountID:
     Description: The Dell Boomi account ID that you want to associate with the new Molecule cluster.
     Type: String
-  EC2SecurityGroupID:
-    Description: The ID of the security group in your existing VPC to provide access to the molecule (e.g., sg-1a2b3c4d)
-    Type: AWS::EC2::SecurityGroup::Id
-    Default: ''
   BastionSecurityGroupID:
-    Description: The ID of the bastion security group in your existing VPC (e.g., sg-1a2b3c4d).
+    Description: The ID of the bastion security group in your existing VPC. Used to provide access to the molecule. (e.g., sg-1a2b3c4d).
     Type: AWS::EC2::SecurityGroup::Id
   MoleculeSharedDir:
     Description: A shared directory for Molecules.
@@ -95,19 +91,13 @@ Parameters:
       - provisioned
       - bursting
   LBListenerPort:
-      Type: String
-      Description: The port of the LB Listener.
-      Default: '9093'
+    Type: String
+    Description: The port of the LB Listener.
+    Default: '9093'
   SSLCertificateArn:
-      Description: The SSL Certificate ID used with the load balancer.
-      Type: String
-      Default: ''
-Conditions:
-  ProvidedSGCondition:
-    !Not
-      - !Equals
-        - !Ref EC2SecurityGroupID
-        - '""'
+    Description: The SSL Certificate ID used with the load balancer.
+    Type: String
+    Default: ''
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -473,7 +463,7 @@ Resources:
             - !Ref BoomiSecurityGroup
             - !Ref BoomiUnicastSG
             - !Ref MoleculeSecurityGroup
-            - !If [ProvidedSGCondition, !Ref EC2SecurityGroupID, !Ref 'AWS::NoValue']
+            - !Ref BastionSecurityGroupID
           AssociatePublicIpAddress: true
           DeviceIndex: '0'
           DeleteOnTermination: false
@@ -513,7 +503,7 @@ Resources:
             - !Ref BoomiSecurityGroup
             - !Ref BoomiUnicastSG
             - !Ref MoleculeSecurityGroup
-            - !If [ProvidedSGCondition, !Ref EC2SecurityGroupID, !Ref 'AWS::NoValue']
+            - !Ref BastionSecurityGroupID
           AssociatePublicIpAddress: true
           DeviceIndex: '0'
           DeleteOnTermination: true
@@ -552,7 +542,7 @@ Resources:
             - !Ref BoomiSecurityGroup
             - !Ref BoomiUnicastSG
             - !Ref MoleculeSecurityGroup
-            - !If [ProvidedSGCondition, !Ref EC2SecurityGroupID, !Ref 'AWS::NoValue']
+            - !Ref BastionSecurityGroupID
           AssociatePublicIpAddress: false
           DeviceIndex: '0'
           DeleteOnTermination: true
@@ -588,10 +578,10 @@ Resources:
       InstanceType: !Ref NodeInstanceType
       NetworkInterfaces:
         - GroupSet:
-          - !Ref BoomiSecurityGroup
-          - !Ref BoomiUnicastSG
-          - !Ref MoleculeSecurityGroup
-          - !If [ProvidedSGCondition, !Ref EC2SecurityGroupID, !Ref 'AWS::NoValue']
+            - !Ref BoomiSecurityGroup
+            - !Ref BoomiUnicastSG
+            - !Ref MoleculeSecurityGroup
+            - !Ref BastionSecurityGroupID
           AssociatePublicIpAddress: false
           DeviceIndex: '0'
           DeleteOnTermination: true
